# tng

./: .gitignore  CMakeLists.txt  LICENSE  README.md
EditorAsset/: MainWindow.ui
EngineAsset/: readme.txt
EngineAsset/Material/: color_fill.mat  early_z.txt  emissive.txt  emissive_texture.mat  predefine.txt  template.txt
EngineAsset/Texture/: default.tex
EngineAsset/VertexFactory/: atlas.vf  local_world_3d.vf  screen_space_2d.vf
SampleAsset/: test.dds  test.res  test.tga  untitled.dae  vv.FBX
SampleAsset/Shader/ES/: CanvasVertexShader.glsl  SimplePixelShader.glsl  SimpleVertexShader.glsl
TestMedia/: default.res  default.tga
Windows_x86_64_vc12_Debug_lib/: core.exp  engine.exp  graphics.exp  plugin_gles.exp  resource.exp
cmake/: Android.mk.in  AndroidManifest.xml.in  Apk.cmake  Compiler.cmake  CompilerFlag.cmake  FindC++0x.cmake  FindGLES.cmake  FindJemalloc.cmake  FindSSE.cmake  FindTCMalloc.cmake  FindX11.cmake  TargetArch.cmake  TngMain.java.in  Until.cmake
cmake/android-cmake/toolchain/: android.toolchain.cmake
cmake/ios-cmake/toolchain/: iOS.cmake
cmake/template/: AndroidManifest.xml.in
codes/: CMakeLists.txt
codes/include/core/: arch_detect.h  atomicfun.h  autoptr.h  binary_reader_writer.h  buffer_alloc.h  byteorder.h  class_desc.h  config.h  core_exports.h  core_macros.h  delegate.h  dynamic_factory.h  encode.h  endian.h  exception.h  filestream.h  filesystem.h  instantiator.h  json_help.h  log.h  math.h  memobj.h  memorystream.h  object.h  os.h  path.h  property.h  refobject.h  returncode.h  runtime_check.h  signal.h  smartptr.h  stl_rebind.h  stringfun.h  table_paser.h  threadfun.h  typeList.h  types.h  variant-internel.h  variant.h
codes/include/engine/: engine.h  engine_macros.h  event.h  event_dispatcher.h  networkservice.h  service.h  thread_pool.h  threadloop.h
codes/include/glesrender/: gles_indexbuffer.h  gles_render.h  gles_render_macros.h  gles_shader.h  gles_texture.h  (+1 more)
codes/plugins/: CMakeLists.txt
codes/plugins/glesrender/: CMakeLists.txt  gles_android.cpp  gles_flascc.cpp  gles_render.cpp  gles_shader.cpp  gles_texture.cpp  gles_vertexbuffer.cpp  gles_win32.cpp  gles_x11.cpp
codes/plugins/modelimport/: CMakeLists.txt  model_imp.cpp  port.cpp  texture_imp.cpp
codes/sample/: CMakeLists.txt  gfx_sample.cpp  model_imp_sample.cpp
codes/src/: CMakeLists.txt
codes/src/core/: android_native_app_glue.c  binary_reader_writer.cpp  class_desc.cpp  core_init.cpp  encode.cpp  exception.cpp  filestream.cpp  filesystem.cpp  log.cpp  math.cpp  object.cpp  os.cpp  path.cpp  platform_android.cpp  platform_linux.cpp  platform_unix.cpp  platform_win.cpp  stringfun.cpp  table_paser.cpp  threadfun.cpp
codes/src/engine/: engine.cpp  engine_init.cpp  event.cpp  event_dispatcher.cpp  networkservice.cpp  service.cpp  thread_pool.cpp  threadloop.cpp
codes/src/graphics/: camera.cpp  color.cpp  graphics.cpp  graphics_init.cpp  gui_render.cpp  input.cpp  material_compiler.cpp  material_expression.cpp  mesh.cpp  model.cpp  pixelformat.cpp  platform_android.cpp  platform_unix.cpp  platform_win.cpp  render.cpp  rendercontex.cpp  rendermaterial.cpp  renderservice.cpp  rendervertexbuffer.cpp  scene.cpp  scene2d.cpp  scenemanger.cpp  scenenode.cpp  scenenode2d.cpp  scenerender.cpp  shader.cpp  texture.cpp  window.cpp  window.mm
codes/src/graphics/gui/: atlas.cpp  gui_base.cpp  image_ctrl.cpp
codes/src/graphics/simplegui/: CMakeLists.txt  imconfig.h
codes/src/resource/: asset_bundle.cpp  resource_manger.cpp  stream_loader.cpp
codes/src/tool/: CMakeLists.txt  ModelImport.cpp  RectangleBinPack.cpp  TextureImport.cpp  main.cpp
codes/tool/: CMakelists.txt  PackFiles.h  Project.cpp  Project.h  Shipyard.cpp
codes/unit_test/: CMakeLists.txt  core_test.h  engine_test.h  unit_test.cpp
dep/: CMakeLists.txt
dep/MathGeoLib/: CMakeLists.txt  SystemInfo.cpp  SystemInfo.h
dep/MathGeoLib/Algorithm/Random/: LCG.cpp
dep/MathGeoLib/Geometry/: GeometryAll.h  TriangleMesh.cpp
dep/MathGeoLib/Math/: Callstack.cpp  Callstack.h  MathFunc.cpp  MathFunc.h  MathLog.cpp  Rect.h  assume.h
dep/MathGeoLib/Time/: Clock.cpp  Clock.h
dep/assimp/: CMakeLists.txt
dep/assimp/code/: BlenderLoader.cpp  BlenderTessellator.h  CMakeLists.txt  DefaultLogger.cpp  FBXParser.cpp  IFCLoader.cpp  ObjFileData.h  ObjFileImporter.cpp  Q3BSPFileImporter.cpp  Win32DebugLogStream.h  XFileParser.cpp  XGLLoader.cpp  pstdint.h
dep/assimp/contrib/clipper/: clipper.hpp
dep/glew/: CMakeLists.txt  glew.c  glew.h
dep/gtest-1.6.0/: CMakeLists.txt
dep/gtest-1.6.0/include/gtest/internal/: gtest-port.h
dep/gtest-1.6.0/src/: gtest-death-test.cc
dep/hgl/: Str.h
dep/lz4/: CMakeLists.txt
dep/nvg/: CMakeLists.txt
dep/rapidjson/example/condense/: condense.cpp
dep/rapidjson/example/pretty/: pretty.cpp
dep/rapidjson/example/tutorial/: tutorial.cpp
dep/resil/: CMakeLists.txt
dep/resil/include/IL/: config.h  devil_cpp_wrapper.hpp  il.h
dep/resil/src-IL/include/: il_bmp.h  il_internal.h
dep/resil/src-IL/msvc10/: IL.sln
dep/resil/src-IL/msvc9/: IL.rc  IL.vcproj
dep/resil/src-IL/src/: il_alloc.c  il_bmp.c  il_dds-save.c  il_error.c  il_files.c  il_gif.cpp  il_icon.c  il_iff.c  il_internal.c  il_io.c  il_jpeg.c  il_pal.c  il_png.c  il_pnm.c  il_psp.c  il_quantizer.c  il_register.c  il_size.c  il_stack.c  il_states.c  il_xpm.c
dep/spine/: CMakeLists.txt
dep/unzip/: ioapi.h  unzip.h
dep/uv/: CMakeLists.txt
dep/uv/include/: uv.h
dep/uv/include/uv-private/: uv-unix.h  uv-win.h
dep/uv/src/: uv-common.c  uv-common.h
dep/uv/src/unix/: core.c  darwin.c  freebsd.c  fs.c  internal.h  kqueue.c  linux-core.c  thread.c
dep/uv/src/win/: internal.h  thread.c  util.c  winapi.c
dep/zlib/: CMakeLists.txt  gzguts.h  zutil.h
proj/: readme.txt
proj/emcc/: emcc_build.bat  emcc_cmake_debug.bat
proj/flascc/: flasCCbuild.bat  flascc_cmake_debug.bat  flascc_cmake_release.bat  gdb.bat
proj/ios/: genios_device.sh  genios_sim.sh
proj/ndk/: build.bat  genandroid.sh  genandroid_win.bat  genandroid_win_release.bat
proj/unix/: debug.sh  release.sh
proj/winrt/: build.bat
(+133 files in other folders)
